--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ jobs:
         run: echo "Hola Mundo"
 
   second_jobs:
+  if: ${{ github.ref == 'refs/heads/main' }}
   needs: first_jobs
   runs-on: ubuntu-latest
 
