Actualizar flujo de trabajo de despliegue para incluir variable de entorno y mejorar la legibilidad

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,6 @@
 name: Deploy to server
 
-on: 
+on:
   push:
     branches:
       - main
@@ -9,15 +9,18 @@ jobs:
   first_jobs:
     runs-on: ubuntu-latest
 
+    env:
+      NAME: CodigoFacilito
+
     steps:
       - name: Hola Mundo
-        run: echo "Hola Mundo"
+        run: echo "Hola Mundo $NAME"
 
   second_jobs:
-  if: ${{ github.ref == 'refs/heads/main' }}
-  needs: first_jobs
-  runs-on: ubuntu-latest
+    if: ${{ github.ref == 'refs/heads/main' }}
+    needs: first_jobs
+    runs-on: ubuntu-latest
 
-  steps:
-    - name: Hola Mundo
-      run: echo "Hola Mundo segundo"
+    steps:
+      - name: Hola Mundo
+        run: echo "Hola Mundo segundo"
